--- a/dot_files/prometheus/polybar/config.ini
+++ b/dot_files/prometheus/polybar/config.ini
@@ -1,5 +1,5 @@
 [colors]
-    background      = #AF000000
+    background      = #9F000000
     background-alt  = #0a6cf5
     foreground      = #dfdfdf
     foreground-alt  = #639fff
@@ -12,10 +12,8 @@
 
 [size]
     bar_height      = 25
-    bar_font        = 22
     bar_width       = 100%
     line_size       = 0
-    line_color      = #0a6cf5
     bar_radius      = 0
     bar_border_size = 0
 
@@ -28,7 +26,7 @@
     width           = ${size.bar_width}
     height          = ${size.bar_height}
     radius          = ${size.bar_radius}
-    fixed-center    = false 
+    fixed-center    = false
     bottom          = false
 
     background      = ${colors.background}
@@ -156,7 +154,7 @@
     interval = 2
     format-prefix = " "
     format-prefix-foreground = ${colors.foreground-alt}
-    format-underline = ${size.line_color}
+    format-underline = ${colors.background-alt}
     label = %percentage:3:3%%
 
 [module/memory]
@@ -164,8 +162,7 @@
     interval = 2
     format-prefix = " "
     format-prefix-foreground = ${colors.foreground-alt}
-    ;format-background = #ababab
-    format-underline = ${size.line_color}
+    format-underline = ${colors.background-alt}
     label = %percentage_used:3:3%%
 
 [module/filesystem]
@@ -174,10 +171,10 @@
 
     mount-0 = /
     format-prefix-foreground = ${colors.foreground-alt}
-    format-underline = ${size.line_color}
+    format-underline = ${colors.background-alt}
 
     ;label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
-    label-mounted = %{F#639fff}%{F-} %percentage_used%%
+    label-mounted = %{F#639fff}%{F-} %percentage_used:3:3%%
     label-unmounted = %mountpoint% not mounted
     label-unmounted-foreground = ${colors.foreground-alt}
 
@@ -187,7 +184,7 @@
     tail = true
     interval = 5
     format-prefix = " "
-    label = %output%°C
+    label = %output:3:3%°C
 
     format-prefix-foreground = ${colors.foreground-alt}
 
@@ -196,21 +193,21 @@
     interface = wlan0
     interval = 3.0
 
+    format-connected-prefix = " "
+    format-connected-prefix-foreground = ${colors.foreground-alt}
     format-connected = <ramp-signal> <label-connected>
-    format-connected-underline = ${size.line_color}
+    format-connected-underline = ${colors.background-alt}
     label-connected = %essid%
 
-    format-disconnected =
-    ;format-disconnected = <label-disconnected>
-    ;format-disconnected-underline = ${self.format-connected-underline}
-    ;label-disconnected = %ifname% disconnected
-    ;label-disconnected-foreground = ${colors.foreground-alt}
+    format-disconnected = "  "
+    format-disconnected-foreground = ${colors.foreground-alt}
 
-    ramp-signal-0 = 
-    ramp-signal-1 = 
-    ramp-signal-2 = 
-    ramp-signal-3 = 
-    ramp-signal-4 = 
+    ramp-signal-0 = 
+    ramp-signal-1 = 
+    ramp-signal-2 = 
+    ramp-signal-3 = 
+    ramp-signal-4 = 
+
     ramp-signal-foreground = ${colors.foreground-alt}
 
 [module/wlan_up]
@@ -237,21 +234,20 @@
     interval = 5.0
 
     format-connected-underline = #55aa55
-    format-connected-prefix = "  "
-    label-connected = ""
+    format-connected-prefix = " "
     format-connected-prefix-foreground = ${colors.foreground-alt}
+    label-connected = ""
 
-    format-disconnected-prefix = "  "
+    format-disconnected-prefix = " "
     format-disconnected-prefix-foreground = ${colors.foreground-alt}
-    label-disconnected = ""
-    label-disconnected-foreground = ${colors.foreground-alt}
+    label-disconnected = ""
 
 [module/eth_up]
     type = internal/network
     interface = eth0
     interval = 1.0
 
-    format-connected-underline = ${size.line_color}
+    format-connected-underline = ${colors.background-alt}
     format-connected-prefix = " "
     format-connected-prefix-foreground = ${colors.foreground-alt}
     label-connected = %upspeed:8:8%
@@ -261,7 +257,7 @@
     interface = eth0
     interval = 1.0
 
-    format-connected-underline = ${size.line_color}
+    format-connected-underline = ${colors.background-alt}
     format-connected-prefix = " "
     format-connected-prefix-foreground = ${colors.foreground-alt}
     label-connected = %downspeed:8:8%
@@ -326,31 +322,28 @@
     
     format-prefix =  " "
     format-prefix-foreground = ${colors.foreground-alt}
-    format-underline = ${size.line_color}
+    format-underline = ${colors.background-alt}
     label = %time:9:9%
 
 [module/pulseaudio]
     type = internal/pulseaudio
 
-    ;format-volume = <label-volume> <bar-volume>
     label-volume = %percentage:3:3%%
-    format-volume =  <label-volume>
-    format-underline = ${size.line_color}
+    format-volume =  <label-volume>
+    format-underline = ${colors.background-alt}
     label-volume-foreground = ${root.foreground}
 
     format-volume-foreground = ${colors.foreground-alt}
-    format-volume-underline = ${size.line_color}
+    format-volume-underline = ${colors.background-alt}
 
-    label-muted =  
-    label-muted-foreground = #639fff
+    label-muted = " "
+    label-muted-foreground = ${colors.foreground-alt}
 
 [module/backlight]
     type = internal/backlight
 
     card = intel_backlight
 
-    ; Create scroll handlers used to set the backlight value
-    ; Default: true
     enable-scroll = true
 
     format = <label>
